--- a/action.yaml
+++ b/action.yaml
@@ -34,7 +34,7 @@ runs:
   steps:
     - name: Login to GitHub container registry
       if: inputs.registryHost != '' && inputs.registryUsername != '' && inputs.registryPassword != ''
-      uses: docker/login-action@v3
+      uses: docker/login-action@c94ce9fb468520275223c153574b00df6fe4bcc9
       with:
         registry: ${{ inputs.registryHost }}
         username: ${{ inputs.registryUsername }}
@@ -72,7 +72,7 @@ runs:
 
     - name: Publish NPM package
       if: github.ref_type == 'branch'
-      uses: devcontainers/ci@v0.3
+      uses: devcontainers/ci@8bf61b26e9c3a98f69cb6ce2f88d24ff59b785c6
       with:
         runCmd: |
           source "/src/${{ steps.prepare.outputs.publishNPMDirectory }}/publish-npm.sh"
