--- a/tests/workflow-test/action.yaml
+++ b/tests/workflow-test/action.yaml
@@ -66,7 +66,7 @@ runs:
         fi
 
     - name: Assert npm package was published
-      uses: devcontainers/ci@v0.3
+      uses: devcontainers/ci@8bf61b26e9c3a98f69cb6ce2f88d24ff59b785c6
       if: always()
       with:
         push: never
